First draft of "formacion estelar" subsection Some changes to bold key words instead of italicize

--- a/Introduccion/Subsecciones/Estrella/Estrella.tex
+++ b/Introduccion/Subsecciones/Estrella/Estrella.tex
@@ -1,18 +1,51 @@
 \section{Estrellas}
 
-Las \textit{estrellas} son de los objetos más fundamentales e importantes en el
+Las \textbf{estrellas} son de los objetos más fundamentales e importantes en el
 estudio de los astros. \citet*{anIntroStellarAstro::chapter1_basicConcepts}
 define una estrella como \quotes{un objeto celeste en el cual existe, o alguna
 vez existió (en el caso de una estrella muerta) fusión de hidrógeno sostenido en
 su núcleo.} Dentro del núcleo de cada estrella activa se forjan nuevos elementos
 más pesados debido a estas reacciones termonucleares, primero generando el helio
-mediante el proceso de $4 \ce{^1H} \rightarrow \ce{^4He} + E$, hasta llegar a la
-fusion del helio para formar el carbono mediante el \textit{proceso
-triple-alfa}.
+mediante el proceso de $\ce{4 ^1H} \rightarrow \ce{^4He} + E$, hasta después
+llegar a la fusión del helio para formar el carbono mediante el \textit{proceso
+triple-alfa} en cuanto se agote el hidrógeno dentro de la estrella. Dentro de
+todas las estrellas existe un balance de fuerzas que mantiene la forma esférica
+de la estrella; esto se le conoce como el \textit{equilibrio hidrostático}, en
+el cual la presión interna de la estrella tiene una contra-fuerza del peso de su
+mismo gas. Este balance es un estado importante, ya que sin cumplir este
+requisito todo el material de la estrella sería expulsado a su medio
+interestelar.
 
-A pesar de este requisito presentado para clasificar a un objeto como una
-estrella existen varios tipos de estrellas en nuestra Galaxia. Entre ellas
-muestran una gran variedad de propiedades físicas, tanto como su brillo y color,
-como su camino evolutivo a lo largo del tiempo, en donde sus comportamientos
-divergen en lo que van agotando su combustible.
+\subsection{Formación}
+
+% TODO: add citations from "Formación estelar" presentation I did in MHD course
+
+El \textbf{medio interestelar} (ISM por sus siglas en inglés) es el hogar de
+toda la materia que existe dentro de nuestra Galaxia. Está compuesta de todo el
+polvo, gas, e incluso los rayos cósmicos que atraviesan el espacio hasta llegar
+a la Tierra donde los podemos detectar. Mucho de este material termina siendo
+acumulado en volúmenes discretos en el espacio. Estas nebulosas llegan a
+temperaturas extremadamente frías, llegando hasta los 10-20° K en su estado de
+equilibrio. En cuanto esta nube es perturbada por alguna fuerza externa su
+configuración empieza a evolucionar. Empiezan a aparecer regiones de mayor
+densidad, donde el material se comienza a acumular, aumentando la masa del
+volumen local y junto a ella la fuerza gravitacional que ejerce en el resto de
+la nube. A lo largo del tiempo el material se empieza a calentar por el mismo
+colapso gravitacional, en la cual la energía gravitacional es convertida a
+energía térmica en las partículas. En cuanto el material logre calentarse lo
+suficiente para que el hidrógeno puede empezar a fusionar a helio el conjunto de
+material se convierte en una \textbf{protoestrella}, la primera fase en la
+formación y evolución de una estrella.
+
+% TODO: probably add symbols table in thesis for M_\odot (and probably others to be used in rest of doc)
+
+El proceso de colapso gravitacional necesariamente requiere una masa mínima para
+que las reacciones termonucleares ocurran de una manera sustentable tal como se
+observa en una estrella. El material acumulado debe consistir de al menos $0.08
+M_{\odot}$ \citet*{anIntroStellarAstro::chapter2_stellarFormation}; de no
+cumplir con esta condición, el cúmulo de gas y polvo no logrará mantener la
+cadena de reacciones termonucleares en su núcleo, resultando en un objeto
+inerte, una \textit{enana cafe}.
+
+\subsection{Evolución}
 
