--- a/Introduccion/Subsecciones/SistemasBinarios.tex
+++ b/Introduccion/Subsecciones/SistemasBinarios.tex
@@ -2,7 +2,7 @@
 
 A diferencia de nuestro sistema solar, una gran mayoría de sistemas dentro de
 nuestra Galaxia están compuestas de multiples estrellas a tan solo unos cuantos
-radios solares de separación. Una parte de estos son los \textit{sistemas
+radios solares de separación. Una parte de estos son los \textbf{sistemas
 binarios}: aquellos compuestos de dos distintas estrellas. En este tipo de
 sistemas la distancia entre las estrellas individuales cae dentro de ordenes de
 unas cuantas unidades astronómicas, ordenes de magnitudes más pequeñas que la
@@ -11,21 +11,36 @@ Proxima Centauri, a cuatro años luz.
 
 \subsection{Clasificaciones Observacionales}
 
-Dependiendo del método de detección y las propiedades aparentes del sistema se puede clasificar un sistema binario de estrellas. Estas clasificaciones son independiente de sus propiedades físicas, como la clase espectral de cada estrella o sus masas individuales. Al determinar su clasificación observacional se puede delimitar las técnicas observacionales que son viables para recabar datos del sistema; un sistema astrométrico sería indistinguible de uno espectroscópico si uno intenta identificar las componentes individuales a simple vista, o con un telescopio demasiado débil para el trabajo.
+Dependiendo del método de detección y las propiedades aparentes del sistema se
+puede clasificar un sistema binario de estrellas. Estas clasificaciones son
+independiente de sus propiedades físicas, como la clase espectral de cada
+estrella o sus masas individuales. Al determinar su clasificación observacional
+se puede delimitar las técnicas observacionales que son viables para recabar
+datos del sistema; un sistema astrométrico sería indistinguible de uno
+espectroscópico si uno intenta identificar las componentes individuales a simple
+vista, o con un telescopio demasiado débil para el trabajo.
 
-Las \textit{binarias visuales} son aquellos cuya separación orbital aparente es suficientemente grande para distinguir las dos estrellas individuales en la bóveda celeste. A pesar de que se puede trazar la órbita de la secundaria con varios años de observaciones, se requiere de cálculos adicionales para determinar la órbita exacta de las componentes. Esto se debe a la inclinación del sistema con respecto al eje de observación hacia la Tierra; solo es posible observar \quotes{una proyección del elipse orbital relativo en el plano del cielo,} \citet{fundamentalAstronomy::chapter10_binaryStars} aunque esto se puede superar usando el hecho de que la estrella primaria aparentemente inmóvil debe de estar presente \quotes{en un punto focal de la órbita relativa.}
+Las \textit{binarias visuales} son aquellos cuya separación orbital aparente es
+suficientemente grande para distinguir las dos estrellas individuales en la
+bóveda celeste. A pesar de que se puede trazar la órbita de la secundaria con
+varios años de observaciones, se requiere de cálculos adicionales para
+determinar la órbita exacta de las componentes. Esto se debe a la inclinación
+del sistema con respecto al eje de observación hacia la Tierra; solo es posible
+observar \quotes{una proyección del elipse orbital relativo en el plano del
+cielo,} \citet{fundamentalAstronomy::chapter10_binaryStars} aunque esto se puede
+superar usando el hecho de que la estrella primaria aparentemente inmóvil debe
+de estar presente \quotes{en un punto focal de la órbita relativa.}
 
-Las \textit{binarias espectroscópicas} presentan variaciones periódicas en sus espectros, en donde las líneas espectrales detectadas \quotes{oscilan periodicamente alrededor de la longitud de onda promedio} \citet{astronomyPhysicalPerspective::chapter5_binaryStars}. Esto se observa debido al \textbf{desplazamiento de Doppler}. 
+Las \textit{binarias espectroscópicas} presentan variaciones periódicas en sus
+espectros, en donde las líneas espectrales detectadas \quotes{oscilan
+periodicamente alrededor de la longitud de onda promedio}
+\citet{astronomyPhysicalPerspective::chapter5_binaryStars}. Esto se observa
+debido al \textbf{desplazamiento de Doppler}. 
 
-\comment{
-Estas estrellas van
-evolucionando juntas desde su formación dentro de una nube molecular común,
-ligadas una con otra en su camino evolutivo. 
-}
+\comment{ Estas estrellas van evolucionando juntas desde su formación dentro de
+una nube molecular común, ligadas una con otra en su camino evolutivo. }
 
-\comment{
-Durante sus primeros momentos de vida se logran
-formar una gran cantidad de estas estrellas; sin embargo la mayoría de las
-estrellas formadas durante esta etapa de tiempo no llegan a la edad vieja,
-siendo consumidas por estrellas más masivas dentro de la nube molecular. 
-}
+\comment{ Durante sus primeros momentos de vida se logran formar una gran
+cantidad de estas estrellas; sin embargo la mayoría de las estrellas formadas
+durante esta etapa de tiempo no llegan a la edad vieja, siendo consumidas por
+estrellas más masivas dentro de la nube molecular. }
