--- a/ref.bib
+++ b/ref.bib
@@ -126,6 +126,16 @@ Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and S
   YEAR           = {2010}
 }
 
+@inbook{anIntroStellarAstro::chapter2_stellarFormation,
+  AUTHOR         = {Francis LeBlanc},
+  CHAPTER        = {2},
+  EDITOR         = {},
+  PAGES          = {},
+  PUBLISHER      = {John Wiley \& Sons Ltd.},
+  TITLE          = {An Introduction to Stellar Astrophysics},
+  YEAR           = {2010}
+}
+
 @ARTICLE{astropy,
    author = {{The Astropy Collaboration} and {Price-Whelan}, A.~M. and {Sip{\\H o}cz}, B.~M. and
 	{G\"{u}nther}, H.~M. and {Lim}, P.~L. and {Crawford}, S.~M. and
