Dra. Flor progress Started on star evolution sub-sub-section. Rewrote section 1.2 according to in-class feedback.

--- a/Introduccion/Subsecciones/Estrella/Estrella.tex
+++ b/Introduccion/Subsecciones/Estrella/Estrella.tex
@@ -19,6 +19,7 @@ interestelar.
 \subsection{Formación}
 
 % TODO: add citations from "Formación estelar" presentation I did in MHD course
+% Agrega paginas web
 
 El \textbf{medio interestelar} (ISM por sus siglas en inglés) es el hogar de
 toda la materia que existe dentro de nuestra Galaxia. Está compuesta de todo el
@@ -49,3 +50,4 @@ inerte, una \textit{enana cafe}.
 
 \subsection{Evolución}
 
+Dado el proceso de generación de energía dentro de una estrella su estructura deberá cambiar mediante el paso del tiempo. 
