--- a/Introduccion/Subsecciones/SistemasBinarios.tex
+++ b/Introduccion/Subsecciones/SistemasBinarios.tex
@@ -1,13 +1,15 @@
 \section{Sistemas Binarios}
 
-A diferencia de nuestro sistema solar, una gran mayoría de sistemas dentro de
-nuestra Galaxia están compuestas de multiples estrellas a tan solo unos cuantos
-radios solares de separación. Una parte de estos son los \textbf{sistemas
-binarios}: aquellos compuestos de dos distintas estrellas. En este tipo de
-sistemas la distancia entre las estrellas individuales cae dentro de ordenes de
-unas cuantas unidades astronómicas, ordenes de magnitudes más pequeñas que la
-distancia desde el Sol hacia la estrella más cercana a nuestro sistema solar,
-Proxima Centauri, a cuatro años luz. 
+La gran mayoría de sistemas estelares dentro de nuestra Galaxia no son aquellos
+solitarios como nuestro propio sistema solar, si no que son compuestas de dos o
+más estrellas ubicadas en corta aproximación de una a otra, a ordenes de
+unidades astronómicas (AU por sus siglas en inglés). Estos sistemas multiples se
+pueden clasificar con mayor precisión para aquellos compuestos de solo dos
+estrellas, denominados como \textit{sistemas binarios}. Dentro de un sistema
+binario la corta separación orbital entre ambas estrellas da como consecuencia a
+fenómenos que surgen mediante la interacción entre las componentes, tanto como
+la interacción gravitacional debido a sus masas, como a la física interesante
+que ocurre en el caso de interacciones de material entre una estrella a otra. 
 
 \subsection{Clasificaciones Observacionales}
 
@@ -27,9 +29,9 @@ varios años de observaciones, se requiere de cálculos adicionales para
 determinar la órbita exacta de las componentes. Esto se debe a la inclinación
 del sistema con respecto al eje de observación hacia la Tierra; solo es posible
 observar \quotes{una proyección del elipse orbital relativo en el plano del
-cielo,} \citet{fundamentalAstronomy::chapter10_binaryStars} aunque esto se puede
-superar usando el hecho de que la estrella primaria aparentemente inmóvil debe
-de estar presente \quotes{en un punto focal de la órbita relativa.}
+cielo,} aunque esto se puede superar usando el hecho de que la estrella primaria
+aparentemente inmóvil debe de estar presente \quotes{en un punto focal de la
+órbita relativa.} \citet{fundamentalAstronomy::chapter10_binaryStars}
 
 Las \textit{binarias espectroscópicas} presentan variaciones periódicas en sus
 espectros, en donde las líneas espectrales detectadas \quotes{oscilan
