Intro progress: 1.1.2, 1.2.1 Finished first draft of "Clasificaciones Observacionales" subsubsection. Little more progress in "Evolucion" subsection.

--- a/Introduccion/Subsecciones/Estrella/Estrella.tex
+++ b/Introduccion/Subsecciones/Estrella/Estrella.tex
@@ -6,7 +6,7 @@ define una estrella como \quotes{un objeto celeste en el cual existe, o alguna
 vez existió (en el caso de una estrella muerta) fusión de hidrógeno sostenido en
 su núcleo.} Dentro del núcleo de cada estrella activa se forjan nuevos elementos
 más pesados debido a estas reacciones termonucleares, primero generando el helio
-mediante el proceso de $\ce{4 ^1H} \rightarrow \ce{^4He} + E$, hasta después
+mediante el siguiente proceso: $\ce{4 ^1H} \rightarrow \ce{^4He} + E$, hasta después
 llegar a la fusión del helio para formar el carbono mediante el \textit{proceso
 triple-alfa} en cuanto se agote el hidrógeno dentro de la estrella. Dentro de
 todas las estrellas existe un balance de fuerzas que mantiene la forma esférica
@@ -50,4 +50,4 @@ inerte, una \textit{enana cafe}.
 
 \subsection{Evolución}
 
-Dado el proceso de generación de energía dentro de una estrella su estructura deberá cambiar mediante el paso del tiempo. 
+En el transcurso del tiempo una estrella va a estar sujeta a ciertos cambios en su estructura característica. Esto se debe a que una estrella la podemos considerar cómo un objeto aislado en el espacio, lo cual significa que no tendrá algún ingreso de material significativo para reemplazar el combustible "quemado" en las reacciones termonucleares. 
