--- a/Introduccion/Subsecciones/SistemasBinarios.tex
+++ b/Introduccion/Subsecciones/SistemasBinarios.tex
@@ -37,12 +37,18 @@ Las \textit{binarias espectroscópicas} presentan variaciones periódicas en sus
 espectros, en donde las líneas espectrales detectadas \quotes{oscilan
 periodicamente alrededor de la longitud de onda promedio}
 \citet{astronomyPhysicalPerspective::chapter5_binaryStars}. Esto se observa
-debido al \textbf{desplazamiento de Doppler}. 
+debido al \textbf{desplazamiento de Doppler}, lo cual causa que la frecuencia de
+un fotón se recorra hacia frecuencias más pequeñas (azules) o más grandes
+(rojas) dependiendo de su velocidad radial con respecto al observador, si se va
+acercando o alejando, respectivamente. Estas también pueden identificadas al
+observar dos distintos grupos de líneas espectrales, el cual es resultado de la
+contribución de ambas estrellas.
 
-\comment{ Estas estrellas van evolucionando juntas desde su formación dentro de
-una nube molecular común, ligadas una con otra en su camino evolutivo. }
-
-\comment{ Durante sus primeros momentos de vida se logran formar una gran
-cantidad de estas estrellas; sin embargo la mayoría de las estrellas formadas
-durante esta etapa de tiempo no llegan a la edad vieja, siendo consumidas por
-estrellas más masivas dentro de la nube molecular. }
+Las \textit{binarias astrométricas}, al igual que las espectroscópicas, solo
+muestran una componente visible al ser observada, al contrario de las binarias
+visibles. Sin embargo, una binaria astrométrica difiera de las otras dos
+categorías definidas en cuestión de su movimiento observado en la bóveda
+celeste. Estas muestran un movimiento errático y no-lineal, algo que no se
+esperaría ver en una estrella solitaria dado su inercia según la primera ley de
+Newton. Estas perturbaciones son causadas por una estrella secundaria no
+aparente al observar el sistema. 
