Restructure and advancement of "Estrella - Evolucion"

--- a/Introduccion/Subsecciones/SistemasBinarios.tex
+++ b/Introduccion/Subsecciones/SistemasBinarios.tex
@@ -52,3 +52,5 @@ celeste. Estas muestran un movimiento errático y no-lineal, algo que no se
 esperaría ver en una estrella solitaria dado su inercia según la primera ley de
 Newton. Estas perturbaciones son causadas por una estrella secundaria no
 aparente al observar el sistema. 
+
+\subsection{Binarias en Contacto}
