--- a/ref.bib
+++ b/ref.bib
@@ -136,6 +136,16 @@ Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and S
   YEAR           = {2010}
 }
 
+@inbook{anIntroTheoryStellarStructureEvolution::chapter2_eqsStellarEvolution,
+  AUTHOR         = {Dina Prialnik},
+  CHAPTER        = {2},
+  EDITOR         = {},
+  PAGES          = {},
+  PUBLISHER      = {Cambridge University Press},
+  TITLE          = {An Introduction to the Theory of Stellar Structure and Evolution},
+  YEAR           = {2010}
+}
+
 @ARTICLE{astropy,
    author = {{The Astropy Collaboration} and {Price-Whelan}, A.~M. and {Sip{\\H o}cz}, B.~M. and
 	{G\"{u}nther}, H.~M. and {Lim}, P.~L. and {Crawford}, S.~M. and
