Added bibliography changes for future use

--- a/ref.bib
+++ b/ref.bib
@@ -86,8 +86,7 @@ Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and S
 
 @inbook{astronomyPhysicalPerspective_stellarOldAgeChapter,
   AUTHOR    = {Marc L. Kutner},
-  TITLE     = {Astronomy},
-  SUBTITLE  = {A Physical Perspective},
+  TITLE     = {Astronomy A Physical Perspective},
   PUBLISHER = {Cambridge University Press},
   CHAPTER   = {Stellar old age},
   EDITION   = {2},
@@ -97,8 +96,7 @@ Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and S
 
 @inbook{astronomyPhysicalPerspective::chapter5_binaryStars,
   AUTHOR    = {Marc L. Kutner},
-  TITLE     = {Astronomy},
-  SUBTITLE  = {A Physical Perspective},
+  TITLE     = {Astronomy A Physical Perspective},
   PUBLISHER = {Cambridge University Press},
   CHAPTER   = {5 - Binary stars and stellar masses},
   EDITION   = {2},
@@ -202,4 +200,38 @@ Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and S
   doi = {10.3847/1538-3881/aabc4f},
   adsurl = {https://ui.adsabs.harvard.edu/abs/2018AJ....156..123T},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{gaiaEclipsingBinarySystemsTwoGauss,
+  AUTHOR          = {Mowlavi, N. and Lecoeur-Taïbi, I. and Holl, B. and Rimoldini, L. and Barblan, F. and Prša, A. and Kochoska, A. and Süveges, M. and Eyer, L. and Nienartowicz, K. and Jevardat, G. and Charnas, J. and Guy, L. and Audard, M.},
+  JOURNAL         = {Astronomy \& Astrophysics},
+  NUMBER          = {},
+  TITLE           = {Gaia eclipsing binary and multiple systems. Two-Gaussian models applied to OGLE-III eclipsing binary light curves in the Large Magellanic Cloud},
+  VOLUME          = {606},
+  month           = {October},
+  YEAR            = {2017}
+}
+
+@article{szkody2002CvSearchSdss,
+  AUTHOR          = {Paula Szkody and Scott F. Anderson and Marcel Agüeros and Ricardo Covarrubias and Misty Bentz and Suzanne Hawley and
+Bruce Margon and and Wolfgang Voges and Arne Henden and Gillian R. Knapp and Daniel E. Vanden Berk and Armin Rest and
+Gajus Miknaitis and Eugene Magnier and J. Brinkmann and I. Csabai and M. Harvanek and R. Hindsley and G. Hennessy and
+Z. Ivezic and S. J. Kleinman and D. Q. Lamb and D. Long and P. R. Newman and E. H. Neilsen and R. C. Nichol and
+A. Nitta and D. P. Schneider and S. A. Snedden and D. G. York},
+  JOURNAL         = {The Astronomical Journal},
+  NUMBER          = {},
+  TITLE           = {CATACLYSMIC VARIABLES FROM THE SLOAN DIGITAL SKY SURVEY. I. THE FIRST RESULTS},
+  VOLUME          = {123},
+  month           = {October},
+  YEAR            = {2001}
+}
+
+@article{phoebeGeneralFrameworkPaper,
+  AUTHOR          = {Kyle E. Conroy and Angela Kochoska and Daniel Hey and Herbert Pablo and Kelly M. Hambleton and Joseph Giammarco and Michael Abdul-Masih and Andrej Prša and David Jones},
+  JOURNAL         = {The Astrophysical Journal Supplement Series},
+  NUMBER          = {250},
+  TITLE           = {Physics of Eclipsing Binaries. V. General Framework for Solving the Inverse Problem},
+  VOLUME          = {},
+  month           = {October},
+  YEAR            = {2020}
 }
