--- a/Introduccion/Subsecciones/Estrella/Evolucion.tex
+++ b/Introduccion/Subsecciones/Estrella/Evolucion.tex
@@ -1,9 +1,19 @@
 \subsection{Evolución}
 
 En el transcurso del tiempo una estrella va a estar sujeta a ciertos cambios en
-su estructura característica. Esto se debe a que una estrella la podemos
-considerar cómo un objeto aislado en el espacio, lo cual significa que no tendrá
+su estructura característica. Esto se debe a que podemos considerar a una
+estrella cómo un objeto aislado en el espacio, lo cual significa que no tendrá
 algún ingreso de material significativo para reemplazar el combustible
-\quotes{quemado} en las reacciones termonucleares. Dado esto, la evolución de
-una estrella se considera en base a su estado termodinámico, y los procesos que
-ocurren mientras que la estrella intenta regresar a un estado de equilibrio. 
+\quotes{quemado} en las reacciones termonucleares. A lo largo del tiempo la
+composición física y química de la estrella deberán cambiar para mantener el
+equilibrio termodinámico.
+
+El combustible primario de una estrella viene siendo el hidrógeno atómico, el
+cual se fusiona con otros átomos (protones individuales) libres, resultando en
+la producción de grandes cantidades de energía en forma de radiación, dejando en
+el lugar de los dos protones un átomo de helio. El helio no es inmediatamente
+util para la estrella cómo combustible; el helio requiere temperaturas más altas
+de las que actualmente están presentes en el núcleo para poder fusionar entre
+si. Todas las estrellas conocidas pasan por esta etapa de evolución estelar;
+mientras que una estrella dependa principalmente del hidrógeno para brillar se
+dice que está en su etapa de \textit{secuencia principal}.
