--- a/ref.bib
+++ b/ref.bib
@@ -235,3 +235,13 @@ A. Nitta and D. P. Schneider and S. A. Snedden and D. G. York},
   month           = {October},
   YEAR            = {2020}
 }
+
+@article{understandingLombScargle,
+  AUTHOR          = {Jacob T. VanderPlas},
+  JOURNAL         = {},
+  NUMBER          = {},
+  TITLE           = {Understanding the Lomb-Scargle Periodogram},
+  VOLUME          = {},
+  month           = {March},
+  YEAR            = {2017}
+}
