Minor re-wording and format changes

--- a/Apendice/GaiaADQL.tex
+++ b/Apendice/GaiaADQL.tex
@@ -1,4 +1,4 @@
-\chapter{Gaia ADQL Encuestas}
+\chapter{Gaia ADQL Encuestas} \label{apendice:gaiaAdql}
 
 \section{DR2}
 \begin{lstlisting}[ language=SQL,
