--- a/Metodologia/Secciones/AnalisisPeriodo/AnalisisPeriodo.tex
+++ b/Metodologia/Secciones/AnalisisPeriodo/AnalisisPeriodo.tex
@@ -50,7 +50,7 @@ ver esta forma esperada de la curva de luz, como se puede ver en la figura
 		orbital de 8.0049 horas. En este momento las curvas de luz de Gaia
 		muestran un comportamiento desordenado debido a que el tiempo de
 		conjunción superior del sistema no ha sido bien definido, y actualmente
-		se encuentra en su valor inicial de $0.0$, el cual no es correcto para
+		se encuentra en su valor inicial de 0.0, el cual no es correcto para
 		este sistema. Tanto el periodo orbital como el tiempo de conjunción
 		superior son corregidos en los siguientes pasos de afinación del modelo
 		de PHOEBE.}
