--- a/Metodologia/Secciones/ModeloComputacional/Subsecciones/Estimadores/EstimacionesIniciales.tex
+++ b/Metodologia/Secciones/ModeloComputacional/Subsecciones/Estimadores/EstimacionesIniciales.tex
@@ -52,7 +52,7 @@ resultado inicial del modelo se puede ver en la figura
 	\centering
 	\includegraphics[scale=0.43]{Metodologia/Secciones/ModeloComputacional/Figures/EstimadoresChiResultados.png}
 	
-	\caption{Resultados de $\chi^2$ de los modelos sintéticos generados
+	\caption{Resultados del ajuste ($\chi^2$) de los modelos sintéticos generados
 	utilizando los parámetros de los estimadores. Cada estadística fue calculada
 	con respecto a todos los datos observacionales disponibles, sin importar las
 	combinaciones de curvas de luz utilizadas para hacer la estimación.
@@ -97,6 +97,9 @@ resultado inicial del modelo se puede ver en la figura
 		\hline
 
 	\end{tabular}
-	\caption{Resultados adoptados de las estimaciones iniciales, utilizando el estimador cuyos datos de entrada fueron las cuatro curvas de luz disponibles. Las unidades de cada valor son especificadas excepto para los parámetros adimensionales.}
+	\caption{Resultados adoptados de las estimaciones iniciales, utilizando el
+		estimador cuyos datos de entrada fueron las cuatro curvas de luz
+		disponibles. Las unidades de cada valor son especificadas excepto para
+		los parámetros adimensionales.}
 	\label{ebaiKnnInitialEstimationsValues}
 \end{table}
