--- a/Muestra/Subsecciones/Catalogos/Gaia.tex
+++ b/Muestra/Subsecciones/Catalogos/Gaia.tex
@@ -6,7 +6,7 @@ objetivo de generar un mapa tridimensional de nuestra Galaxia, la Vía Láctea.
 Esto incluye calcular las propiedades astrométricas y astrofísicas de sus
 fuentes observadas con mayor precisión que cualquier otro catálogo publicado
 previamente. Para lograr esto se utiliza un satélite espacial, el cual está
-denominado como \gaiaNoSpace, ubicado en el punto Lagrangiano L2 con respecto al
+denominado como \gaiaNoSpace, ubicado en el punto de Lagrange L2 con respecto al
 sistema Sol-Tierra. Desde este punto la nave tiene una vista sin obstrucciones
 que le permite observar una cantidad de estrellas enorme, con \textapproxtilde
 1,000 millones de fuentes visibles con los instrumentos del satélite
