--- a/Tesis.tex
+++ b/Tesis.tex
@@ -22,6 +22,7 @@
 \usepackage[nottoc]{tocbibind}
 \usepackage{url}
 \usepackage[spanish]{babel}
+\usepackage[group-digits=true,group-minimum-digits=4]{siunitx}
 
 % SQL formatting code
     % Taken from https://tex.stackexchange.com/questions/455993/formatting-sql-code
@@ -259,7 +260,9 @@ has been provided by national institutions, in particular the institutions
 participating in the {\it Gaia} Multilateral Agreement.
 
 This research made use of Astropy,\footnote{\url{http://www.astropy.org}} a
-community-developed core Python package for Astronomy \citet*{astropy}.
+community-developed core Python package for Astronomy \citet{astropy}.
+
+This research has made use of the SIMBAD database, operated at CDS, Strasbourg, France.
 \clearpage
 
 \bibliography{ref}
