--- a/ref.bib
+++ b/ref.bib
@@ -192,6 +192,25 @@ Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and S
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@article{astroplan,
+	title = {astroplan: {An} {Open} {Source} {Observation} {Planning} {Package} in {Python}},
+	volume = {155},
+	issn = {1538-3881},
+	shorttitle = {astroplan},
+	url = {https://iopscience.iop.org/article/10.3847/1538-3881/aaa47e},
+	doi = {10.3847/1538-3881/aaa47e},
+	abstract = {We present astroplan—an open source, open development, Astropy afﬁliated package for ground-based observation planning and scheduling in Python. astroplan is designed to provide efﬁcient access to common observational quantities such as celestial rise, set, and meridian transit times and simple transformations from sky coordinates to altitude-azimuth coordinates without requiring a detailed understanding of astropy’s implementation of coordinate systems. astroplan provides convenience functions to generate common observational plots such as airmass and parallactic angle as a function of time, along with basic sky (ﬁnder) charts. Users can determine whether or not a target is observable given a variety of observing constraints, such as airmass limits, time ranges, Moon illumination/separation ranges, and more. A selection of observation schedulers are included that divide observing time among a list of targets, given observing constraints on those targets. Contributions to the source code from the community are welcome.},
+	language = {en},
+	number = {3},
+	urldate = {2023-10-30},
+	journal = {The Astronomical Journal},
+	author = {Morris, Brett M. and Tollerud, Erik and Sipőcz, Brigitta and Deil, Christoph and Douglas, Stephanie T. and Medina, Jazmin Berlanga and Vyhmeister, Karl and Smith, Toby R. and Littlefair, Stuart and Price-Whelan, Adrian M. and Gee, Wilfred T. and Jeschke, Eric},
+	month = feb,
+	year = {2018},
+	pages = {128},
+	file = {Morris et al. - 2018 - astroplan An Open Source Observation Planning Pac.pdf:/home/ramon/Zotero/storage/TEEGQS6C/Morris et al. - 2018 - astroplan An Open Source Observation Planning Pac.pdf:application/pdf},
+}
+
 @article{gaiaEclipsingBinarySystemsTwoGauss,
   AUTHOR          = {Mowlavi, N. and Lecoeur-Taïbi, I. and Holl, B. and Rimoldini, L. and Barblan, F. and Prša, A. and Kochoska, A. and Süveges, M. and Eyer, L. and Nienartowicz, K. and Jevardat, G. and Charnas, J. and Guy, L. and Audard, M.},
   JOURNAL         = {Astronomy \& Astrophysics},
@@ -214,6 +233,37 @@ A. Nitta and D. P. Schneider and S. A. Snedden and D. G. York},
   VOLUME          = {123},
   month           = {October},
   YEAR            = {2001}
+}
+
+
+@article{atlasATOObjectDiscovery,
+	title = {A {First} {Catalog} of {Variable} {Stars} {Measured} by the {Asteroid} {Terrestrial}-impact {Last} {Alert} {System} ({ATLAS})},
+	volume = {156},
+	issn = {1538-3881},
+	url = {https://dx.doi.org/10.3847/1538-3881/aae47f},
+	doi = {10.3847/1538-3881/aae47f},
+	abstract = {The Asteroid Terrestrial-impact Last Alert System (ATLAS) carries out its primary planetary defense mission by surveying about 13,000 deg2 at least four times per night. The resulting data set is useful for the discovery of variable stars to a magnitude limit fainter than r ∼ 18, with amplitudes down to 0.02 mag for bright objects. Here, we present a Data Release One catalog of variable stars based on analyzing the light curves of 142 million stars that were measured at least 100 times in the first two years of ATLAS operations. Using a Lomb–Scargle periodogram and other variability metrics, we identify 4.7 million candidate variables. Through the Space Telescope Science Institute, we publicly release light curves for all of them, together with a vector of 169 classification features for each star. We do this at the level of unconfirmed candidate variables in order to provide the community with a large set of homogeneously analyzed photometry and to avoid pre-judging which types of objects others may find most interesting. We use machine learning to classify the candidates into 15 different broad categories based on light-curve morphology. About 10\% (427,000 stars) pass extensive tests designed to screen out spurious variability detections: we label these as “probable” variables. Of these, 214,000 receive specific classifications as eclipsing binaries, pulsating, Mira-type, or sinusoidal variables: these are the “classified” variables. New discoveries among the probable variables number 315,000, while 141,000 of the classified variables are new, including about 10,400 pulsating variables, 2060 Mira stars, and 74,700 eclipsing binaries.},
+	language = {en},
+	number = {5},
+	urldate = {2023-11-01},
+	journal = {The Astronomical Journal},
+	author = {Heinze, A. N. and Tonry, J. L. and Denneau, L. and Flewelling, H. and Stalder, B. and Rest, A. and Smith, K. W. and Smartt, S. J. and Weiland, H.},
+	month = nov,
+	year = {2018},
+	note = {Publisher: The American Astronomical Society},
+	pages = {241},
+	file = {IOP Full Text PDF:/home/ramon/Zotero/storage/G8ZHYB67/Heinze et al. - 2018 - A First Catalog of Variable Stars Measured by the .pdf:application/pdf},
+}
+
+
+@article{krisciunas1998SdssCriteria,
+  AUTHOR          = {Kevin Krisciunas and Bruce Margon and Paula Szkody},
+  JOURNAL         = {Publications of the Astronomical Society of the Pacific},
+  NUMBER          = {},
+  TITLE           = {The Recognition of Unusual Objects in the Sloan Digital Sky Survey Color System},
+  VOLUME          = {},
+  YEAR            = {1998},
+  month           = {August},
 }
 
 @article{phoebeGeneralFrameworkPaper,
