--- a/Apendice/GaiaADQL.tex
+++ b/Apendice/GaiaADQL.tex
@@ -1,6 +1,6 @@
-\chapter{Gaia ADQL Encuestas} \label{apendice:gaiaAdql}
+\chapter{Gaia ADQL Queries} \label{apendice:gaiaAdql}
 
-\section{DR2}
+\section{DR2} \label{apendice:gaiaAdql:dr2}
 \begin{lstlisting}[ language=SQL,
 	deletekeywords={IDENTITY},
 	deletekeywords={[2]INT},
@@ -40,7 +40,7 @@ FROM (
 WHERE sdss_transform.g_sdss - sdss_transform.r_sdss < 0.7 AND sdss_transform.r_sdss - sdss_transform.i_sdss > 0.30
 \end{lstlisting}
 
-\section{DR3}
+\section{DR3} \label{apendice:gaiaAdql:dr3}
 \begin{lstlisting}[ language=SQL,
 	deletekeywords={IDENTITY},
 	deletekeywords={[2]INT},
@@ -51,36 +51,30 @@ WHERE sdss_transform.g_sdss - sdss_transform.r_sdss < 0.7 AND sdss_transform.r_s
 	frame=tb,
 	framerule=0pt ]
 
-SELECT
-    *,
-    array_element(a0, 1) AS J2000_ra_prop,
-    array_element(a0, 2) AS J2000_dec_prop,
-    array_element(a0, 3) AS J2000_parallax_prop,
-    array_element(a0, 4) AS J2000_pmra_prop,
-    array_element(a0, 5) AS J2000_pmdec_prop,
-    array_element(a0, 6) AS J2000_rv_prop,
-    sdss_transform.g_sdss - sdss_transform.r_sdss AS g_r_sdss_color,
-    sdss_transform.r_sdss - sdss_transform.i_sdss AS r_i_sdss_color
+SELECT TOP 3630000 * ,
+	array_element (sdss_transform.a0 , 1) AS J2000_ra_prop,
+	array_element (sdss_transform.a0 , 2) AS J2000_dec_prop,
+	array_element (sdss_transform.a0 , 3) AS J2000_parallax_prop,
+	array_element (sdss_transform.a0 , 4) AS J2000_pmra_prop,
+	array_element (sdss_transform.a0 , 5) AS J2000_pmdec_prop,
+	array_element (sdss_transform.a0 , 6) AS J2000_rv_prop,
+	sdss_transform.g_sdss - sdss_transform.r_sdss AS g_r_sdss_color,
+	sdss_transform.r_sdss - sdss_transform.i_sdss AS r_i_sdss_color
 FROM
-    (
-        SELECT
-            *,
-            -0.13518 + 0.46245 * bp_rp + 0.2517 * Power(bp_rp, 2) - 0.021349 * Power(bp_rp, 3) + phot_g_mean_mag AS g_sdss,
-            0.29676 - 0.64728 * bp_rp + 0.10174 * Power(bp_rp, 2) + phot_g_mean_mag AS i_sdss,
-            0.12879 - 0.24662 * bp_rp + 0.027464 * Power(bp_rp, 2) + 0.049465 * Power (bp_rp, 3) + phot_g_mean_mag AS r_sdss
-        FROM
-            (
-                SELECT *, EPOCH_PROP(ra, dec, parallax, pmra, pmdec, radial_velocity, ref_epoch, 2000) AS a0
-                FROM gaiadr3.gaia_source
-            ) as gdr3
-        WHERE
-            gdr3.phot_variable_flag = 'VARIABLE'
-            AND gdr3.source_id NOT IN (
-                SELECT source_id FROM gaiadr3.sdssdr13_best_neighbour
-            )
-    ) AS sdss_transform
-WHERE
-    sdss_transform.g_sdss - sdss_transform.r_sdss < 0.7
-    AND sdss_transform.r_sdss - sdss_transform.i_sdss > 0.30
+(
+	SELECT * ,
+	   -0.2199 + 0.6365 * bp_rp + 0.1548 * Power(bp_rp, 2) - 0.0064 * Power(bp_rp , 3) + phot_g_mean_mag AS g_sdss,
+	   0.293 - 0.6404 * bp_rp + 0.09609 * Power(bp_rp , 2) + 0.002104 * Power(bp_rp, 3) + phot_g_mean_mag AS i_sdss,
+	   0.09837 - 0.08592 * bp_rp + 0.1907 * Power(bp_rp , 2) + 0.1701 * Power(bp_rp , 3) + phot_g_mean_mag AS r_sdss,
+	   0.4619 - 0.8992*bp_rp +0.08271*Power(bp_rp, 2) - 0.005029*Power(bp_rp, 3) + phot_g_mean_mag AS z_sdss
+	FROM (
+		SELECT *, EPOCH_PROP(ra, dec, parallax, pmra, pmdec, radial_velocity, ref_epoch, 2000) AS a0
+		FROM gaiadr3.gaia_source) AS gdr3
+		WHERE gdr3.phot_variable_flag = 'VARIABLE'
+			AND gdr3.source_id NOT IN
+				(SELECT sdss.source_id FROM gaiadr3.sdssdr13_best_neighbour as sdss)
+) AS sdss_transform
+WHERE sdss_transform.g_sdss - sdss_transform.r_sdss < 0.7
+	AND sdss_transform.r_sdss - sdss_transform.i_sdss > 0.30;
 
 \end{lstlisting}
