Updated text to focus on EBs instead of VCs Updated document file organization structure

--- a/Muestra/Muestra.tex
+++ b/Muestra/Muestra.tex
@@ -1,19 +1,17 @@
 \chapter{Muestra}
 
-Este trabajo tiene como objetivo principal producir datos fotométricos de
-estrellas marcadas como candidatas a variables cataclísmicas. Debido a la
-escasez de variables cataclísmicas en la literatura---solo 1093 variables
-cataclísmicas habían sido identificadas hasta 2015 en el catálogo de Ritter-Kolb
-\citet*{ritterKolbImpactArticle}---existen pocos datos con los cuales corroborar
-los modelos actuales de una variable cataclísmica. Al identificar nuevas
-estrellas como variables cataclísmicas y generar una curva de luz de estas
-mismas estaremos aportando a la muestra disponible en la literatura. Con este
-fín utilizamos el catálogo de \gaia para obtener nuestras candidatas, usando el
-catálogo de SDSS para seleccionar solo las fuentes no observadas previamente. 
+% Este trabajo tiene como objetivo principal producir datos fotométricos de
+% estrellas marcadas como candidatas a variables cataclísmicas. Debido a la
+% escasez de variables cataclísmicas en la literatura---solo 1093 variables
+% cataclísmicas habían sido identificadas hasta 2015 en el catálogo de Ritter-Kolb
+% \citet*{ritterKolbImpactArticle}---existen pocos datos con los cuales corroborar
+% los modelos actuales de una variable cataclísmica. Al identificar nuevas
+% estrellas como variables cataclísmicas y generar una curva de luz de estas
+% mismas estaremos aportando a la muestra disponible en la literatura. Con este
+% fín utilizamos el catálogo de \gaia para obtener nuestras candidatas, usando el
+% catálogo de SDSS para seleccionar solo las fuentes no observadas previamente. 
 
-\section{Catálogos}
-\input{Muestra/Subsecciones/Catalogos/Gaia.tex}
-\input{Muestra/Subsecciones/Catalogos/Sdss.tex}
-
+\input{Muestra/Secciones/Catalogos.tex}
 \input{Muestra/Secciones/SzkodySearchSDSS.tex}
 \input{Muestra/Secciones/CriteriosDeSeleccion.tex}
+\input{Muestra/Secciones/ATO_Objeto.tex}
