--- a/Muestra/Secciones/Subsecciones/Gaia.tex
+++ b/Muestra/Secciones/Subsecciones/Gaia.tex
@@ -23,7 +23,7 @@ basa en el \textbf{Data Release 2}, el cuál de ahora en adelante será denomina
 simplemente \textbf{GDR2}. Este catálogo está compuesto de las observaciones
 hechas por \gaia entre las fechas de 25 de Julio del 2014 y el 23 de Mayo del
 2016, un periodo de tiempo de 22 meses en total. \citet*{gaiaDr2} GDR2 consiste
-de 1,692,919,135 de fuentes individuales. Existe una gran diversidad de objetos
+de \num{1692919135} de fuentes individuales. Existe una gran diversidad de objetos
 dentro de este catálogo, desde estrellas de secuencia principal, asteroides
 dentro del sistema solar, hasta estrellas variables en las regiones más lejanas
 en la Galaxia.
